# agentX

./: package-lock.json  package.json
agentX/: README.md  angular.json  package-lock.json  package.json
agentX/.angular/cache/20.1.1/agentX/: .tsbuildinfo
agentX/.angular/cache/20.1.1/agentX/vite/: com.chrome.devtools.json
agentX/backend/: .env  main.py  pyproject.toml
agentX/backend/src/: auth.py  database.py  deps.py  main.py  models.py  sample.py  schemas.py  test.py  utils.py
agentX/backend/src/routes/: dashboard.py  users.py
agentX/backend/src/services/: generate_quiz_agent.py  notes_agent.py  summary_agent.py
agentX/frontend/: package-lock.json  package.json
agentX/frontend/src/: index.html  main.ts
agentX/frontend/src/app/: app.config.ts  app.routes.ts
agentX/frontend/src/app/pages/dashboard/: dashboard.html  dashboard.ts
agentX/frontend/src/app/pages/details-page/: details-page.html  details-page.scss  details-page.ts  details-page2.html
agentX/frontend/src/app/services/: auth.service.ts
agentX/src/: index.html
agentX/src/app/: app.html  app.routes.ts  app.spec.ts  app.ts
agentX/src/app/pages/dashboard/: dashboard.html  dashboard.scss  dashboard.ts
agentX/src/app/pages/login/: login.html  login.scss  login.ts
agentX/src/app/pages/pricing/: pricing.html  pricing.scss
agentX/src/app/pages/quiz-page/: quiz-page.scss  quiz-page.ts
agentX/src/app/pages/signup/: signup.html  signup.scss  signup.ts
agentX/src/app/pages/start/: start.html  start.scss  start.ts
agentX/src/app/pages/top-bar/: top-bar.html  top-bar.scss
(+14 files in other folders)
